--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "css-loader": "^7.1.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "redux": "^5.0.1",
+    "style-loader": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
