--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "bootstrap": "^5.3.3",
     "css-loader": "^7.1.2",
     "react": "^18.3.1",
@@ -17,7 +18,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
     "redux": "^5.0.1",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "sweetalert2": "^11.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
